# cortex

./: .gitignore  CONTRIBUTING.md  MODULE.bazel  README.md  docker-compose.yml  nx.json
backend/: .env  BUILD.bazel  DOCKERFILE  go.mod  go.sum
backend/cmd/app/: http_ca.crt  main.go
backend/internal/app/database/: database.go  database_config.go  factory.go  factory_test.go  mariadb.go  postgres.go
backend/internal/app/elasticsearch/: elasticesearch.test.go  elasticsearch.go
backend/internal/app/schema/: config_schema.go  schema.go
backend/pkg/elasticsearchservice/: fill_description.go
backend/pkg/logging/: logging.go
backend/rest/: mysql.http
backend/utils/: http_ca.crt
cortex-backend/: DOCKERFILE  go.mod  go.sum
cortex-backend/cmd/app/: main.go
cortex-backend/cmd/cortex-api/: elasticsearch-utils.go  main.go
cortex-backend/internal/app/database/: mysql.go
cortex-backend/internal/app/elasticsearch/: elasticsearch.go
cortex-backend/internal/app/schema/: schema.go
cortex-backend/pkg/elasticsearchservice/: fill_description.go
cortex-backend/rest/: mysql.http
cortex-backend/tests/integration/: database_test.go
cortex-backend/utils/: elasticsearch-utils.go
cortex-frontend/: package-lock.json  package.json
docs/Writerside/: hi.tree
docs/Writerside/topics/: C4.md  How-to-config.md  git.md
frontend/: .pnp.cjs  DOCKERFILE  package-lock.json  package.json
frontend/app/: http_ca.crt  page.tsx
frontend/app/components/: DataCard.tsx  DataCard.types.ts
frontend/pages/api/: search.ts
