# Go BUILD.bazel

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_lib",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/yourusername/yourprojectname",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "go_app",
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)